Fix to anchor link focus underlines. Fix to .btn focus outlines. Fix to search bar results z-index.

--- a/#dev/scss/global/_base.scss
+++ b/#dev/scss/global/_base.scss
@@ -89,6 +89,7 @@ a:visited {
         outline: none !important;
         box-shadow: none !important;
         color: inherit !important;
+        text-decoration: underline !important;
     }
 }
 
