--- a/#dev/scss/global/core/_header.scss
+++ b/#dev/scss/global/core/_header.scss
@@ -54,7 +54,7 @@ html.safari .id7-masthead,
 	background: transparent;
 	padding: 0;
 	position: relative;
-	z-index: 38;
+	z-index: 40;
 
 	.id7-masthead-contents {
 		width: 90%;
